--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/chai": "^3.4.34",
     "@types/jasmine": "^2.2.30",
     "@types/node": "^6.0.42",
+    "@types/sinon": "^1.16.32",
     "angular-cli": "1.0.0-beta.19-3",
     "codelyzer": "1.0.0-beta.1",
     "dts-generator": "^2.0.0",
