--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "ng test",
     "pree2e": "webdriver-manager update",
     "e2e": "protractor",
-    "generate-types": "dts-generator --name angular --project node_modules/@angular --out angular.d.ts"
+    "generate-types": "dts-generator --name angular --project . --out angular.d.ts",
+    "prefetch-exercises": "node src/gen/prefetch-exercises"
   },
   "private": true,
   "dependencies": {
