--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "pree2e": "webdriver-manager update",
     "e2e": "protractor",
     "generate-types": "dts-generator --name angular --project . --out angular.d.ts",
-    "prefetch-exercises": "node src/gen/prefetch-exercises"
+    "prefetch-exercises": "node src/gen/prefetch-exercises",
+    "deploy": "ng build --prod && firebase deploy"
   },
   "private": true,
   "dependencies": {
@@ -37,6 +38,7 @@
     "angular-cli": "1.0.0-beta.19-3",
     "codelyzer": "1.0.0-beta.1",
     "dts-generator": "^2.0.0",
+    "firebase-tools": "^3.2.0",
     "jasmine-core": "2.4.1",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
