Split exercise definition with exercise processing to simplify adding new codelabs

--- a/package.json
+++ b/package.json
@@ -29,14 +29,15 @@
     "zone.js": "^0.6.23"
   },
   "devDependencies": {
-    "@types/chai": "^3.4.34",
-    "@types/sinon": "^1.16.32",
     "@angular/compiler-cli": "2.2.3",
+    "@types/chai": "^3.4.34",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.42",
+    "@types/sinon": "^1.16.32",
     "angular-cli": "1.0.0-beta.22-1",
     "codelyzer": "~2.0.0-beta.1",
     "firebase-tools": "^3.2.0",
+    "i18n-extract": "^0.4.2",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
@@ -44,6 +45,7 @@
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
+    "node-polyglot": "^2.2.1",
     "protractor": "4.0.9",
     "ts-node": "1.2.1",
     "tslint": "^4.0.2",
