--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "pree2e": "webdriver-manager update",
     "e2e": "protractor",
     "deploy": "ng build --prod && firebase deploy",
+    "build-zh": "ng build --prod --env=prod-zh",
     "i18n": "ts-node src/i18n/extractMessages"
   },
   "private": true,
