Temporarily get rid of firebase everywhere as it breaks aot compilation

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor",
     "deploy": "ng build --prod && firebase deploy",
-    "build-zh": "ng build --prod --env=prod-zh",
+    "build-zh": "ng build --prod --aot --env=prod-zh",
     "i18n": "ts-node src/i18n/extractMessages"
   },
   "private": true,
@@ -24,9 +24,7 @@
     "@angular/platform-browser": "^2.3.1",
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
-    "angularfire2": "^2.0.0-beta.6",
     "core-js": "^2.4.1",
-    "firebase": "^3.6.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
     "zone.js": "^0.7.2"
@@ -35,9 +33,9 @@
     "@angular/compiler-cli": "^2.3.1",
     "@types/chai": "^3.4.34",
     "@types/jasmine": "2.5.38",
+    "@types/mocha": "^2.2.34",
     "@types/node": "^6.0.42",
     "angular-cli": "1.0.0-beta.24",
-    "firebase-tools": "^3.2.0",
     "codelyzer": "~2.0.0-beta.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
@@ -46,9 +44,9 @@
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.2.1",
-    "protractor": "~4.0.13",
     "node-polyglot": "^2.2.1",
     "node-ts": "^2.1.2",
+    "protractor": "~4.0.13",
     "ts-node": "1.2.1",
     "tslint": "^4.0.2",
     "typescript": "~2.0.3",
