--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "lint": "tslint \"src/**/*.ts\"",
+    "lint": "tslint \"src/**/*.ts\" --project src/tsconfig.json --type-check && tslint \"e2e/**/*.ts\" --project e2e/tsconfig.json --type-check",
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "e2e": "protractor",
@@ -35,7 +35,7 @@
     "@types/jasmine": "2.5.38",
     "@types/mocha": "^2.2.34",
     "@types/node": "^6.0.42",
-    "angular-cli": "1.0.0-beta.24",
+    "angular-cli": "1.0.0-beta.25.5",
     "codelyzer": "~2.0.0-beta.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
@@ -46,12 +46,11 @@
     "karma-remap-istanbul": "^0.2.1",
     "monaco": "^1.201612240510.0",
     "monaco-editor": "^0.7.0",
-    "node-polyglot": "^2.2.1",
+    "node-polyglot": "^2.2.2",
     "node-ts": "^2.1.2",
     "protractor": "~4.0.13",
     "ts-node": "1.2.1",
-    "tslint": "^4.0.2",
-    "typescript": "~2.0.3",
-    "webdriver-manager": "10.2.5"
+    "tslint": "^4.3.0",
+    "typescript": "~2.0.3"
   }
 }
