--- a/package.json
+++ b/package.json
@@ -48,9 +48,10 @@
     "monaco-editor": "^0.7.0",
     "node-polyglot": "^2.2.2",
     "node-ts": "^2.1.2",
+    "plugin-typescript": "^5.3.1",
     "protractor": "~4.0.13",
     "ts-node": "1.2.1",
     "tslint": "^4.3.0",
-    "typescript": "~2.0.3"
+    "typescript": "^2.0.10"
   }
 }
