Install firebase-tools

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/node": "^6.0.42",
     "angular-cli": "1.0.0-beta.25.5",
     "codelyzer": "~2.0.0-beta.1",
+    "firebase-tools": "^3.2.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
