--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/node": "^6.0.42",
     "angular-cli": "1.0.0-beta.26",
     "codelyzer": "~2.0.0-beta.1",
+    "extract-text-webpack-plugin": "^2.0.0-rc.0",
     "firebase-tools": "^3.2.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
@@ -51,6 +52,8 @@
     "node-ts": "^2.1.2",
     "plugin-typescript": "^5.3.1",
     "protractor": "~4.0.13",
+    "systemjs": "^0.19.45",
+    "systemjs-builder": "^0.16.0",
     "ts-node": "1.2.1",
     "tslint": "^4.3.0",
     "typescript": "~2.0.3"
