--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "rxjs": "^5.0.1"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.0-beta.32.3",
+    "@angular/cli": "^1.0.0-rc.1",
     "@angular/common": "^2.4.8",
     "@angular/compiler-cli": "^2.3.1",
     "@angular/forms": "^2.4.8",
