Add a test codelab

--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "@types/node": "^6.0.42",
     "codelyzer": "~2.0.0-beta.1",
     "extract-text-webpack-plugin": "^2.0.0-rc.0",
+    "file-loader": "^0.10.1",
     "firebase-tools": "^3.2.1",
+    "import-loader": "^1.0.1",
+    "imports-loader": "^0.7.1",
     "jasmine-core": "2.5.2",
     "jasmine-spec-reporter": "2.5.0",
     "karma": "1.2.0",
