Upgrade to @angular/cli v1 Fixes #61

--- a/package.json
+++ b/package.json
@@ -16,45 +16,50 @@
   },
   "private": true,
   "dependencies": {
-    "rxjs": "^5.0.1"
+    "@angular/common": "^4.0.0",
+    "@angular/compiler": "^4.0.0",
+    "@angular/core": "^4.0.0",
+    "@angular/forms": "^4.0.0",
+    "@angular/http": "^4.0.0",
+    "@angular/platform-browser": "^4.0.0",
+    "@angular/platform-browser-dynamic": "^4.0.0",
+    "@angular/router": "^4.0.0",
+    "rxjs": "^5.1.0",
+    "core-js": "^2.4.1",
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.0-rc.1",
-    "@angular/common": "^2.4.8",
-    "@angular/compiler-cli": "^2.3.1",
-    "@angular/forms": "^2.4.8",
-    "@angular/http": "^2.4.8",
-    "@angular/platform-browser": "^2.4.8",
-    "@angular/platform-browser-dynamic": "^2.4.8",
-    "@angular/router": "^3.4.8",
+    "@angular/cli": "^1.0.0",
+    "@angular/compiler-cli": "^4.0.0",
     "@types/chai": "^3.4.34",
     "@types/jasmine": "2.5.38",
-    "@types/mocha": "^2.2.34",
-    "@types/node": "^6.0.42",
-    "codelyzer": "~2.0.0-beta.1",
+    "@types/node": "^6.0.60",
+    "codelyzer": "~2.0.0",
     "extract-text-webpack-plugin": "^2.0.0-rc.0",
     "file-loader": "^0.10.1",
     "firebase-tools": "^3.2.1",
     "import-loader": "^1.0.1",
     "imports-loader": "^0.7.1",
     "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "2.5.0",
-    "karma": "1.2.0",
-    "karma-chrome-launcher": "^2.0.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.2.1",
+    "jasmine-spec-reporter": "~3.2.0",
+    "karma": "~1.4.1",
+    "karma-chrome-launcher": "~2.0.0",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^0.2.0",
+    "karma-jasmine": "~1.1.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
     "monaco": "^1.201612240510.0",
     "monaco-editor": "^0.7.0",
     "node-polyglot": "^2.2.2",
     "node-ts": "^2.1.2",
     "plugin-typescript": "^5.3.1",
-    "protractor": "~4.0.13",
+    "protractor": "~5.1.0",
+    "source-map-support": "^0.4.3",
     "systemjs": "^0.19.45",
     "systemjs-builder": "^0.16.0",
-    "ts-node": "1.2.1",
-    "tslint": "^4.3.0",
-    "typescript": "~2.0.3"
+    "ts-node": "~2.0.0",
+    "tslint": "~4.5.0",
+    "typescript": "~2.2.0"
   },
   "description": "This is an codelab platform designed to simplify creating interactive exercises.",
   "main": "karma.conf.js",
