--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
+    "build": "ng build",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
     "ng": "ng",
     "start": "ng serve",
-    "lint": "tslint \"src/**/*.ts\" --project src/tsconfig.json --type-check && tslint \"e2e/**/*.ts\" --project e2e/tsconfig.json --type-check",
     "test": "ng test",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
-    "e2e": "protractor",
     "deploy": "ng build --prod && firebase deploy",
     "build-zh": "ng build --prod --aot --env=prod-zh",
     "i18n": "ts-node src/i18n/extractMessages"
@@ -31,7 +32,7 @@
   "devDependencies": {
     "@angular/cli": "^1.0.0",
     "@angular/compiler-cli": "^4.0.0",
-    "@types/chai": "^3.4.34",
+    "@types/chai": "^3.4.35",
     "@types/jasmine": "2.5.38",
     "@types/node": "^6.0.60",
     "codelyzer": "~2.0.0",
